--- a/barnehage/templates/base.html
+++ b/barnehage/templates/base.html
@@ -86,8 +86,9 @@
         <a href="{{ url_for('index') }}">Hjem</a>
         <a href="{{ url_for('behandle') }}">Søk</a>
         <a href="{{ url_for('barnehager') }}">Barnehager</a>
-
+        
         <a href="{{ url_for('commit') }}" style="float: right;"> commit</a>
+        <a href="{{ url_for('soknader') }}" style="float: right;"> soknader</a>
         <span style="float: right">ADMIN:</span>
     </nav>
     <hr>
