--- a/barnehage/templates/svar.html
+++ b/barnehage/templates/svar.html
@@ -1,5 +1,16 @@
 {% extends 'base.html' %}
-<!-- Skriv inn din kode her for å returnere svar for bruksscenario om svar på en søknad. --> 
+
+{% block content %}
+<h1>Søknadsrespons</h1>
+
+<p>Status: {{ response }}</p>
+
+{% if response == "TILBUD" %}
+    <p>Gratulerer! Du har fått tilbud om barnehageplass.</p>
+{% else %}
+    <p>Beklager, det er for øyeblikket ingen ledige plasser.</p>
+{% endif %}
+
 {% block content %}
 <table border=1>
 	{% for k,v in data.items() %}
