umiddelbar respons på søknad

--- a/barnehage/templates/soknad.html
+++ b/barnehage/templates/soknad.html
@@ -47,7 +47,7 @@
 	</fieldset>
 	<br>
 	<label for="liste_over_barnehager_prioritert_5">Liste over Barnehager (Prioritert):</label>
-	<input type="text" id="liste_over_barnehager_prioritert_5" name="liste_over_barnehager_prioritert_5" /><br>
+	<input type="text" id="liste_over_barnehager_prioritert_5" name="liste_over_barnehager_prioritert_5" required /><br>
 
 	<label for="tidspunkt_for_oppstart">Tidspunkt for Oppstart:</label>
 	<input type="date" id="tidspunkt_for_oppstart" name="tidspunkt_for_oppstart" /><br>
@@ -56,7 +56,7 @@
 	<input type="checkbox" id="har_sosken_som_gaar_i_barnehagen" name="har_sosken_som_gaar_i_barnehagen" /><br>
 
 	<label for="brutto_inntekt_husholdning">Brutto Inntekt Husholdning:</label>
-	<input type="number" id="brutto_inntekt_husholdning" name="brutto_inntekt_husholdning" /><br><br>
+	<input type="number" id="brutto_inntekt_husholdning" name="brutto_inntekt_husholdning" required/><br><br>
 	<input type="submit" value="Send søknad"> 
 </form>
 {% endblock %}
