bug fix, og edge case

--- a/barnehage/templates/svar.html
+++ b/barnehage/templates/svar.html
@@ -18,7 +18,7 @@
 	{% for elt in kglist %}
 	<tr>
 		<th>{{ elt.barnehage_navn }}</th>
-		<td>{{ elt.barnehage_plasser }}</td>
+		<td>{{ elt.barnehage_ledige_plasser }}</td>
 	</tr>
 	{% endfor %}
 </table>
