--- a/barnehage/templates/soknader.html
+++ b/barnehage/templates/soknader.html
@@ -3,17 +3,33 @@
 {% block content %}
 <table border=1>
 	<tr>
-		<th>foresatt 1 navn</th>
-		<th>Navn</th>
-		<th>Antall plasser</th>
-		<th>Antall ledige plasser</th>
+		<th>Soknad ID</th>
+		<th>Foresatt 1 ID</th>
+		<th>Foresatt 2 ID</th>
+		<th>Barn ID</th>
+		<th>Barnevern</th>
+		<th>Sykd familie</th>
+		<th>Sykd barn</th>
+		<th>Annet</th>
+		<th>Barnehage prioritet</th>
+		<th>Sosken i barnehagen</th>
+		<th>Oppstart</th>
+		<th>Brutto inntekt</th>
 	</tr>
-	{% for elt in data %}
+	{% for elt in soknader %}
 	<tr>
-		<td>{{ elt.barnehage_id }}</td>
-		<td>{{ elt.barnehage_navn }}</td>
-		<td>{{ elt.barnehage_antall_plasser }}</td>	
-		<td>{{ elt.barnehage_ledige_plasser }}</td>
+		<td>{{ elt.sok_id }}</td>
+		<td>{{ elt.foresatt_1 }}</td>
+		<td>{{ elt.foresatt_2 }}</td>	
+		<td>{{ elt.barn_1}}</td>
+		<td>{{ elt.fr_barnevern }}</td>
+		<td>{{ elt.fr_sykd_familie }}</td>
+		<td>{{ elt.fr_sykd_barn }}</td>
+		<td>{{ elt.fr_annet}}</td>
+		<td>{{ elt.barnehage_prioritet }}</td>
+		<td>{{ elt.sosken__i_barnehagen }}</td>
+		<td>{{ elt.tidspunkt_oppstart}}</td>
+		<td>{{ elt.brutto_inntekt}}</td>
 	</tr>
 	{% endfor %}
 </table>
