--- a/barnehage/templates/soknader.html
+++ b/barnehage/templates/soknader.html
@@ -15,8 +15,10 @@
 		<th>Sosken i barnehagen</th>
 		<th>Oppstart</th>
 		<th>Brutto inntekt</th>
+		<th>Status</th>
 	</tr>
 	{% for elt in soknader %}
+		{% for i in range(0, len) %}
 	<tr>
 		<td>{{ elt.sok_id }}</td>
 		<td>{{ elt.foresatt_1 }}</td>
@@ -26,11 +28,13 @@
 		<td>{{ elt.fr_sykd_familie }}</td>
 		<td>{{ elt.fr_sykd_barn }}</td>
 		<td>{{ elt.fr_annet}}</td>
-		<td>{{ elt.barnehage_prioritet }}</td>
+		<td>{{ elt.barnehager_prioritert }}</td>
 		<td>{{ elt.sosken__i_barnehagen }}</td>
 		<td>{{ elt.tidspunkt_oppstart}}</td>
 		<td>{{ elt.brutto_inntekt}}</td>
-	</tr>
+		<td>{{status[i]}}</td>
+		{% endfor %}
 	{% endfor %}
+	</tr>
 </table>
 {% endblock %}
